fixing text cut off - overflow

--- a/css/spud-boot.css
+++ b/css/spud-boot.css
@@ -386,7 +386,7 @@ a:hover img {
 	color: #333;
 	line-height: 110%;
 	text-overflow: ellipsis;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	/*height: 37px;*/
 	font-family: 'Open Sans', "Franklin Gothic Bold", "Arial Black", sans-serif;
 	font-weight: 700;
@@ -405,7 +405,7 @@ a:hover img {
 	color: #999;
 	margin: 0px 0px 0px 0px;
 	text-overflow: ellipsis;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	display: inline-block;
 	width: 100%;
 	height: 16px;
@@ -3298,6 +3298,7 @@ a:hover.special_bundle {
      position: relative; 
     text-align: right;
     padding: 0px 0px 0px 0px;
+	margin: 0 0 -15px 0;
 }
 
 
@@ -3426,7 +3427,7 @@ h3.weeklyfeats {
 }
 .pricedets {
 	padding: 2px 0px;
-	margin: -15px auto 0px auto;
+	margin: 0 auto 0px auto;
 	position: relative;
 }
 .plus_cart .fa-cart-plus {
@@ -8000,7 +8001,7 @@ li.opt-buttn:hover {
 	color: #333;
 	line-height: 110%;
 	text-overflow: ellipsis;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	font-family: 'Open Sans', "Franklin Gothic Bold", "Arial Black", sans-serif;
 	font-weight: 700;
 	font-family: 'Open Sans', Arial, Helvetica, Sans-serif;
@@ -8157,7 +8158,7 @@ div.bubble {
 	color: #999;
 	margin: 0px 0px 0px 0px;
 	text-overflow: ellipsis;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	display: block;
 	white-space: nowrap;
 	text-align: left;
